# models/User.js
@@ -6,43 +6,11 @@ module.exports = (mongoose) => {
       password: {
         type: String
       },
-      displayName: {
-        type: String
-      },
       email: {
         type: String
       },
-      phoneNumber: {
-        type: String
-      },
-      currentLocation: {
-        type: String
-      },
-      openToNewOpportunities: {
-        type: Boolean
-      },
-      profileIsPublic: {
-        type: Boolean
-      },
-      theme_name: {
-        type: String
-      },
-      profile: {
-        experience: {
-          type: [mongoose.SchemaTypes.Mixed]
-        },
-        education: {
-          type: [mongoose.SchemaTypes.Mixed]
-        },
-        projects: {
-          type: [mongoose.SchemaTypes.Mixed]
-        },
-        skills: {
-          type: [String]
-        },
-        references: {
-          type: [mongoose.SchemaTypes.Mixed]
-        }
+      event_name: {
+        type: Array
       }
     });
   
