# models/index.js
@@ -6,7 +6,7 @@ mongoose.Promise = global.Promise;
 const db = {};
 db.mongoose = mongoose;
 db.url = dbConfig.url;
-db.theme = require('./theme.js');(mongoose);
+db.event = require('./event.js')(mongoose);
 db.user = require('./user.js')(mongoose);
 
 module.exports = db;
