# swaggerdesign.json
@@ -12,12 +12,12 @@
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "host": "todo-app-backend2.herokuapp.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "tags": [
     {
-      "name": "theme",
-      "description": "Operations about themes"
+      "name": "event",
+      "description": "Operations about events"
     },
     {
       "name": "user",
@@ -28,43 +28,148 @@
       "description": "These API endpoints are designed and will be created in the near future"
     }
   ],
-  "schemes": ["https"],
+  "schemes": ["http"],
   "paths": {
-    "/theme/{themeName}": {
+
+    "/event": {
       "get": {
-        "tags": ["theme"],
-        "summary": "Finds Themes by name",
-        "description": "Each theme has a unique name, this will basically find a single theme by an exact name almost like an id",
-        "operationId": "findThemeByName",
+        "tags": ["event"],
+        "summary": "Get all events",
+        "operationId": "getAllEvents",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "Array",
+              "$ref": "#/definitions/Event"
+            }
+          },
+          "500": {
+            "description": "Error occurred"
+          }
+        }
+      },
+      "post": {
+        "tags": ["event"],
+        "summary": "Create event",
+        "description": "This is for when an event is created",
+        "operationId": "createEvent",
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "themeName",
-            "in": "path",
-            "description": "Theme name string is required and functions as id",
+            "in": "body",
+            "name": "body",
+            "description": "Created event object",
             "required": true,
-            "type": "string",
-            "items": {
-              "type": "string",
-              "default": "available"
-            },
-            "collectionFormat": "csv"
+            "schema": {
+              "$ref": "#/definitions/CredentialsforEvents"
+            }
           }
         ],
-        "security": [
+        "responses": {
+          "default": {
+            "description": "An Event object",
+            "schema": {
+              "$ref": "#/definitions/Event"
+            }
+          }
+        }
+      }
+
+    },
+    "/event/{eventName}": {
+      "get": {
+        "tags": ["event"],
+        "summary": "Finds Events by name",
+        "description": "Each event has a unique name, this will basically find a single event by an exact name almost like an id",
+        "operationId": "findEventByName",
+        "produces": ["application/json"],
+        "parameters": [
           {
-            "petstore_auth": ["write:pets", "read:pets"]
+            "name": "eventName",
+            "in": "path",
+            "description": "Event name string is required and functions as id",
+            "required": true,
+            "type": "string"
+            
           }
         ],
         "responses": {
           "200": {
             "description": "successful operation",
             "schema": {
-              "type": "object"
+              "$ref": "#/definitions/Event"
             }
           },
           "400": {
-            "description": "Invalid theme name value"
+            "description": "Invalid event name value"
+          },
+          "404": {
+            "description": "Event not found"
+          }
+        }
+      },
+      "put": {
+        "tags": ["event"],
+        "summary": "Updated event",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "updateEvent",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "name that need to be updated",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Updated event object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Event"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successfully modified event"
+          },
+          "400": {
+            "description": "Invalid event supplied"
+          },
+          "404": {
+            "description": "Event not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["event"],
+        "summary": "Delete event",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "deleteEvent",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "The name that needs to be deleted",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successfully deleted event"
+          },
+          "400": {
+            "description": "Invalid event supplied"
+          },
+          "404": {
+            "description": "Event not found"
           }
         }
       }
@@ -99,13 +204,13 @@
                 },
                 "name": {
                   "type": "string",
-                  "example": "Nike Theme"
+                  "example": "Nike Event"
                 }
               }
             }
           },
           "400": {
-            "description": "Invalid theme name value"
+            "description": "Invalid event name value"
           }
         }
       }
@@ -337,48 +442,28 @@
         },
         "password": {
           "type": "string"
-        },
-        "displayName": {
-          "type": "string"
-        },
-        "info": {
-          "$ref": "#/definitions/User_info"
-        },
-        "profile": {
-          "$ref": "#/definitions/User_profile"
         }
       }
     },
-    "Theme": {
+    "Event": {
       "type": "object",
-      "required": ["colors", "fontFamily", "fontSize", "name"],
+      "required": ["title", "done", "date", "description"],
       "properties": {
         "id": {
           "type": "integer",
           "format": "int64"
         },
-        "name": {
-          "type": "string",
-          "example": "Nike Theme"
+        "title": {
+          "type": "string"
         },
-        "fontSize": {
-          "type": "integer",
-          "example": 18
+        "done": {
+          "type": "boolean"
         },
-        "fontFamily": {
-          "type": "string",
-          "example": "futura"
+        "date": {
+          "type": "string"
         },
-        "inspiration": {
-          "type": "string",
-          "example": "https://www.nike.com/"
-        },
-        "colors": {
-          "type": "array",
-          "example": ["", "#111", "#fff", "#F5F3EE", "#757575", "#7e7e7e", ", ", ", ", ""],
-          "items": {
-            "type": "string"
-          }
+        "description": {
+          "type": "string"
         }
       }
     },
@@ -394,180 +479,24 @@
         }
       }
     },
-    "User_info": {
+    "CredentialsforEvents": {
       "type": "object",
-      "properties": {
-        "email": {
-          "type": "string"
-        },
-        "phoneNumber": {
-          "type": "string"
-        },
-        "currentLocation": {
-          "type": "string"
-        },
-        "openToNewOpportunities": {
-          "type": "boolean"
-        },
-        "profileIsPublic": {
-          "type": "boolean"
-        },
-        "theme_name": {
-          "type": "string"
-        }
-      }
-    },
-    "User_profile_experience": {
-      "type": "object",
-      "properties": {
-        "jobTitle": {
-          "type": "string"
-        },
-        "jobDescription": {
-          "type": "string"
-        },
-        "details": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "dateStart": {
-          "type": "string"
-        },
-        "dateEnd": {
-          "type": "string"
-        },
-        "company": {
-          "type": "string"
-        },
-        "location": {
-          "type": "string"
-        }
-      }
-    },
-    "User_profile_education": {
-      "type": "object",
-      "properties": {
-        "institution": {
-          "type": "string"
-        },
-        "programTitle": {
-          "type": "string"
-        },
-        "programDescription": {
-          "type": "string"
-        },
-        "dateStart": {
-          "type": "string"
-        },
-        "dateEnd": {
-          "type": "string"
-        },
-        "completed": {
-          "type": "boolean"
-        },
-        "location": {
-          "type": "string"
-        },
-        "topics": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "User_profile_projects": {
-      "type": "object",
+      "required": ["title", "done", "date", "description"],
       "properties": {
         "title": {
           "type": "string"
         },
+        "done": {
+          "type": "boolean"
+        },
+        "date": {
+          "type": "string"
+        },
         "description": {
           "type": "string"
-        },
-        "dateStart": {
-          "type": "string"
-        },
-        "dateEnd": {
-          "type": "string"
-        },
-        "githubUrl": {
-          "type": "string"
-        },
-        "hostedUrl": {
-          "type": "string"
-        },
-        "images": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "skills": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
         }
       }
-    },
-    "User_profile_references": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "relationship": {
-          "type": "string"
-        },
-        "contactInfo": {
-          "type": "string"
-        },
-        "yearsKnown": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "knownFromWhere": {
-          "type": "string"
-        }
-      }
-    },
-    "User_profile": {
-      "type": "object",
-      "properties": {
-        "experience": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/User_profile_experience"
-          }
-        },
-        "education": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/User_profile_education"
-          }
-        },
-        "projects": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/User_profile_projects"
-          }
-        },
-        "skills": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "references": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/User_profile_references"
-          }
-        }
-      }
+      
     }
   }
 }
